# task02---zoo-axshai

include/: AnimalTypes.h
src/: Owl.cpp
tasks_week3_Shai_Axelrod/Zoo/: CMakeLists.txt
tasks_week3_Shai_Axelrod/Zoo/include/: Animal.h  CMakeLists.txt  Clownfish.h  Owl.h  Shark.h  Zoo.h
tasks_week3_Shai_Axelrod/Zoo/src/: Animal.cpp  CMakeLists.txt  Clownfish.cpp  Shark.cpp  Zoo.cpp  main.cpp
